bootstrap js added

--- a/index.html
+++ b/index.html
@@ -55,5 +55,8 @@
 
     </footer>
     <!-- footer end -->
+ <!-- ---------------------    -->
+ <!-- bootstrap js -->
+ <script src="/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
