--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-commerce</title>
     <!-- bootstrap link  -->
-    <link href="http://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
  <!-- ---------------------    -->
@@ -61,7 +61,7 @@
                     </div>
                   </div>
                   <div class="col-lg-5">
-                    <img src="/images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                    <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
                   </div>
                 </div>
               </div>
@@ -76,7 +76,7 @@
                     </div>
                   </div>
                   <div class="col-lg-5">
-                    <img src="/images/banner-images/tv.png" class="d-block w-100" alt="...">
+                    <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
                   </div>
                 </div>      
               </div>
@@ -91,7 +91,7 @@
                     </div>
                   </div>
                   <div class="col-lg-5">
-                    <img src="/images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                    <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
                   </div>
                 </div> 
               </div>
@@ -122,6 +122,6 @@
     <!-- footer end -->
  <!-- ---------------------    -->
  <!-- bootstrap js -->
- <script src="http://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
