--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div>
                       <h1>Mega LCD TV For Sports</h1>
                       <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
-                      <h1>$1200</h1>
+                      <h1 style="color: #FF438D;">$1200</h1>
                       <button class="text-white" style="background-color: #FF438D; padding: 9px 25px; border: 0; border-radius: 8px;">Buy Now</button>
                     </div>
                   </div>
@@ -86,7 +86,7 @@
                     <div>
                       <h1>X-Box for your living room</h1>
                       <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.</p>
-                      <h1>$600</h1>
+                      <h1 style="color: #FF438D;">$600</h1>
                       <button class="text-white" style="background-color: #FF438D; padding: 9px 25px; border: 0; border-radius: 8px;">Buy Now</button>
                     </div>
                   </div>
