--- a/index.html
+++ b/index.html
@@ -35,14 +35,10 @@
                   </li>
                 </ul>
               </div>
-              <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-secondary" type="submit">Search</button>
-              </form>
             </div>
           </nav>
     <!-- carousel -->
-        <section class="container my-5 rounded-3" style="background-color: #FCEAE8;">
+        <section class="container" style="background-color: #FCEAE8; border-radius: 15px; margin-top: 8rem;">
           <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
