--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <!-- ---------------------    -->
     <!-- header start -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgba(0, 255, 255, 0.575); height: 75px;">
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgba(0, 255, 255, 0.575);">
             <div class="container">
               <a class="navbar-brand" href="#">
                 <img src="images/logo.png" alt="" class="d-inline-block align-text-top"></a>
@@ -38,7 +38,7 @@
             </div>
           </nav>
     <!-- carousel -->
-        <section class="container" style="background-color: #FCEAE8; border-radius: 15px; margin-top: 8rem;">
+        <section class="container" style="background-color: #FCEAE8; border-radius: 15px; margin-top: 6rem;">
           <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -105,9 +105,32 @@
     </header>
     <!-- header end -->
  <!-- ---------------------    -->
-    <!-- main section start -->
+    
+ <!-- main section start -->
     <main>
-
+      <!-- Categoris -->
+  <section class="container my-5">
+    <div class="row row-cols-lg-3 gy-5 ">
+      <div class="col-12 col-lg-4 col-md-6">
+        <div class="p-3 border-0 shadow bg-light d-flex justify-content-between align-items-center">
+          <h1 style="font-weight: 750;">Watch</h1>
+          <img src="/images/categories/watch.png" height="120" alt="">
+        </div>
+      </div>
+      <div class="col-12 col-lg-4 col-md-6">
+        <div class="p-3 border-0 shadow bg-light d-flex justify-content-between align-items-center">
+          <h1 style="font-weight: 750;">Bag</h1>
+          <img src="/images/categories/bag.png" height="120" alt="">
+        </div>
+      </div>
+      <div class="col-12 col-lg-4 col-md-6">
+        <div class="p-3 border-0 shadow bg-light d-flex justify-content-between align-items-center">
+          <h1 style="font-weight: 750;">Shoes</h1>
+          <img src="/images//categories/shoes.png" height="120" alt="">
+        </div>
+      </div>
+    </div>  
+</section>
     </main>
     <!-- main section end -->
  <!-- ---------------------    -->
