--- a/index.html
+++ b/index.html
@@ -114,19 +114,19 @@
       <div class="col-12 col-lg-4 col-md-6">
         <div class="p-3 border-0 shadow bg-light d-flex justify-content-between align-items-center">
           <h1 style="font-weight: 750;">Watch</h1>
-          <img src="/images/categories/watch.png" height="120" alt="">
+          <img src="images/categories/watch.png" height="120" alt="">
         </div>
       </div>
       <div class="col-12 col-lg-4 col-md-6">
         <div class="p-3 border-0 shadow bg-light d-flex justify-content-between align-items-center">
           <h1 style="font-weight: 750;">Bag</h1>
-          <img src="/images/categories/bag.png" height="120" alt="">
+          <img src="images/categories/bag.png" height="120" alt="">
         </div>
       </div>
       <div class="col-12 col-lg-4 col-md-6">
         <div class="p-3 border-0 shadow bg-light d-flex justify-content-between align-items-center">
           <h1 style="font-weight: 750;">Shoes</h1>
-          <img src="/images//categories/shoes.png" height="120" alt="">
+          <img src="images//categories/shoes.png" height="120" alt="">
         </div>
       </div>
     </div>  
