--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <!-- ---------------------    -->
     <!-- header start -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgba(0, 255, 255, 0.575);">
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgba(47, 160, 163, 0.261);">
             <div class="container">
               <a class="navbar-brand" href="#">
                 <img src="images/logo.png" alt="" class="d-inline-block align-text-top"></a>
@@ -50,8 +50,8 @@
                 <div class="row d-flex align-items-center m-3">
                   <div class="col-lg-7">
                     <div>
-                    <h1>Cool Dude Headphone</h1>
-                    <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
+                    <h1 style="font-weight: 800;">Cool Dude Headphone</h1>
+                    <h4>This is the best headphone in the world for people who just want to waste time in front of funky world.</h4>
                     <h1 style="color: #FF438D;">$420</h1>
                     <button class="text-white" style="background-color: #FF438D; padding: 9px 25px; border: 0; border-radius: 8px;">Buy Now</button>
                     </div>
@@ -65,8 +65,8 @@
                 <div class="row d-flex align-items-center m-3">
                   <div class="col-lg-7">
                     <div>
-                      <h1>Mega LCD TV For Sports</h1>
-                      <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
+                      <h1 style="font-weight: 800;">Mega LCD TV For Sports</h1>
+                      <h4>This is the best tv in the world for people who just want to waste time in front of tv.</h4>
                       <h1 style="color: #FF438D;">$1200</h1>
                       <button class="text-white" style="background-color: #FF438D; padding: 9px 25px; border: 0; border-radius: 8px;">Buy Now</button>
                     </div>
@@ -80,8 +80,8 @@
                 <div class="row d-flex align-items-center m-3">
                   <div class="col-lg-7">
                     <div>
-                      <h1>X-Box for your living room</h1>
-                      <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.</p>
+                      <h1 style="font-weight: 800;">X-Box for your living room</h1>
+                      <h4>This is the best x-box in the world for people who just want to waste time in front of fake sports.</h4>
                       <h1 style="color: #FF438D;">$600</h1>
                       <button class="text-white" style="background-color: #FF438D; padding: 9px 25px; border: 0; border-radius: 8px;">Buy Now</button>
                     </div>
@@ -107,31 +107,76 @@
  <!-- ---------------------    -->
     
  <!-- main section start -->
-    <main>
-      <!-- Categoris -->
+ <main>
+ <!-- Categoris -->
   <section class="container my-5">
     <div class="row row-cols-lg-3 gy-5 ">
       <div class="col-12 col-lg-4 col-md-6">
-        <div class="p-3 border-0 shadow bg-light d-flex justify-content-between align-items-center">
+        <div class="p-3 border-0 shadow-sm bg-light d-flex justify-content-between align-items-center">
           <h1 style="font-weight: 750;">Watch</h1>
           <img src="images/categories/watch.png" height="120" alt="">
         </div>
       </div>
       <div class="col-12 col-lg-4 col-md-6">
-        <div class="p-3 border-0 shadow bg-light d-flex justify-content-between align-items-center">
+        <div class="p-3 border-0 shadow-sm bg-light d-flex justify-content-between align-items-center">
           <h1 style="font-weight: 750;">Bag</h1>
           <img src="images/categories/bag.png" height="120" alt="">
         </div>
       </div>
       <div class="col-12 col-lg-4 col-md-6">
-        <div class="p-3 border-0 shadow bg-light d-flex justify-content-between align-items-center">
+        <div class="p-3 border-0 shadow-sm bg-light d-flex justify-content-between align-items-center">
           <h1 style="font-weight: 750;">Shoes</h1>
           <img src="images//categories/shoes.png" height="120" alt="">
         </div>
       </div>
     </div>  
 </section>
-    </main>
+
+  <!-- Shoes  -->
+  </main>
+  <section class="container">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col-12 col-lg-4 col-md-6">
+        <div class="card h-100 border-0 rounded-3 shadow-lg" style="border-radius:.9rem!important;">
+          <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h1 class="card-title" style="font-weight: 750;">Supply 350</h1>
+            <hp class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</hp>
+          </div>
+          <div class="m-3">
+            <h1>$120</h1>
+            <button class="text-white" style="background-color: #FF438D; padding: 9px 25px; border: 0; border-radius: 8px;">Order Now</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-lg-4 col-md-6">
+        <div class="card h-100 border-0 shadow-lg" style="border-radius:.9rem!important;">
+          <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h1 class="card-title" style="font-weight: 750;">Nike 360</h1>
+            <hp class="card-text">This card has supporting text below as a natural lead-in to additional content.</hp>
+          </div>
+          <div class="m-3">
+            <h1>$140</h1>
+            <button class="text-white" style="background-color: #FF438D; padding: 9px 25px; border: 0; border-radius: 8px;">Order Now</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-lg-4 col-md-6">
+        <div class="card h-100 border-0 shadow-lg" style="border-radius:.9rem!important;">
+          <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h1 class="card-title" style="font-weight: 750;">Red Airmax</h1>
+            <p class="card-text" style="text-align: justify;">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          </div>
+          <div class="m-3">
+            <h1>$150</h1>
+            <button class="text-white" style="background-color: #FF438D; padding: 9px 25px; border: 0; border-radius: 8px;">Order Now</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
     <!-- main section end -->
  <!-- ---------------------    -->
     <!-- footer section  -->
