--- a/index.html
+++ b/index.html
@@ -12,33 +12,33 @@
  <!-- ---------------------    -->
     <!-- header start -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgba(47, 160, 163, 0.261);">
-            <div class="container">
-              <a class="navbar-brand" href="#">
-                <img src="images/logo.png" alt="" class="d-inline-block align-text-top"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Backpack</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Subscribe</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
+    <div class="container">
+      <nav class="navbar p-3 navbar-expand-lg navbar-light" style="background-color: rgba(47, 160, 163, 0.261);">
+        <a class="navbar-brand" href="#">
+          <img src="images/logo.png" alt="" class="d-inline-block align-text-top"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Shoes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Backpack</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Subscribe</a>
+            </li>
+          </ul>
+        </div>
+    </nav>
+    </div>  
     <!-- carousel -->
-        <section class="container" style="background-color: #FCEAE8; border-radius: 15px; margin-top: 6rem;">
+        <section class="container" style="background-color: #FCEAE8; border-radius: 15px; margin-top: 6rem; margin-bottom: 4rem;">
           <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -104,28 +104,30 @@
         </section>
     </header>
     <!-- header end -->
- <!-- ---------------------    -->
     
- <!-- main section start -->
+<!-- ---------------------    -->
+    
+<!-- main section start -->
  <main>
- <!-- Categoris -->
-  <section class="container my-5">
-    <div class="row row-cols-lg-3 gy-5 ">
+  <!-- Categoris -->
+  <section class="container" style="margin-bottom: 4rem;">
+    <h1 style="font-weight: 630; text-align: center;">Categories</h1>
+    <div class="row row-cols-lg-3 gy-5">
       <div class="col-12 col-lg-4 col-md-6">
-        <div class="p-3 border-0 shadow-sm bg-light d-flex justify-content-between align-items-center">
-          <h1 style="font-weight: 750;">Watch</h1>
+        <div class="p-3 border-0 d-flex justify-content-between align-items-center" style="background-color:#FFA500; border-radius: .8rem!important;">
+          <h1 style="font-weight: 600;">Watch</h1>
           <img src="images/categories/watch.png" height="120" alt="">
         </div>
       </div>
       <div class="col-12 col-lg-4 col-md-6">
-        <div class="p-3 border-0 shadow-sm bg-light d-flex justify-content-between align-items-center">
-          <h1 style="font-weight: 750;">Bag</h1>
+        <div class="p-3 border-0 d-flex justify-content-between align-items-center" style="background-color: #DA70D6; border-radius: .8rem!important;">
+          <h1 style="font-weight: 600;">Bag</h1>
           <img src="images/categories/bag.png" height="120" alt="">
         </div>
       </div>
       <div class="col-12 col-lg-4 col-md-6">
-        <div class="p-3 border-0 shadow-sm bg-light d-flex justify-content-between align-items-center">
-          <h1 style="font-weight: 750;">Shoes</h1>
+        <div class="p-3 border-0 bg-info d-flex justify-content-between align-items-center" style="border-radius: .8rem!important;">
+          <h1 style="font-weight: 600;">Shoes</h1>
           <img src="images//categories/shoes.png" height="120" alt="">
         </div>
       </div>
@@ -133,15 +135,15 @@
 </section>
 
   <!-- Shoes  -->
-  </main>
-  <section class="container">
+  <section class="container" style="margin-bottom: 4rem;">
+    <h1 style="font-weight: 630; text-align: center;">Shoes</h1>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col-12 col-lg-4 col-md-6">
         <div class="card h-100 border-0 rounded-3 shadow-lg" style="border-radius:.9rem!important;">
           <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h1 class="card-title" style="font-weight: 750;">Supply 350</h1>
-            <hp class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</hp>
+            <h1 class="card-title" style="font-weight: 600;">Supply 350</h1>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
           </div>
           <div class="m-3">
             <h1>$120</h1>
@@ -153,8 +155,8 @@
         <div class="card h-100 border-0 shadow-lg" style="border-radius:.9rem!important;">
           <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h1 class="card-title" style="font-weight: 750;">Nike 360</h1>
-            <hp class="card-text">This card has supporting text below as a natural lead-in to additional content.</hp>
+            <h1 class="card-title" style="font-weight: 600;">Nike 360</h1>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
           </div>
           <div class="m-3">
             <h1>$140</h1>
@@ -166,7 +168,7 @@
         <div class="card h-100 border-0 shadow-lg" style="border-radius:.9rem!important;">
           <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h1 class="card-title" style="font-weight: 750;">Red Airmax</h1>
+            <h1 class="card-title" style="font-weight: 600;">Red Airmax</h1>
             <p class="card-text" style="text-align: justify;">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
           </div>
           <div class="m-3">
@@ -177,15 +179,81 @@
       </div>
     </div>
   </section>
-    <!-- main section end -->
- <!-- ---------------------    -->
-    <!-- footer section  -->
-    <footer>
 
-    </footer>
-    <!-- footer end -->
- <!-- ---------------------    -->
- <!-- bootstrap js -->
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <!-- Backpack  -->
+  <section class="container" style="margin-bottom: 7rem;">
+    <h1 style="font-weight: 630; text-align: center;">Backpack</h1>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col-12 col-lg-4 col-md-6">
+        <div class="card h-100 border-0 rounded-3 shadow" style="border-radius:.9rem!important;">
+          <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h1 class="card-title" style="font-weight: 600;">Ogio</h1>
+            <h3>$160</h3>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="m-3">
+            <button class="text-white" style="background-color: #FF438D; padding: 9px 25px; border: 0; border-radius: 8px;">Order Now</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-lg-4 col-md-6">
+        <div class="card h-100 border-0 shadow" style="border-radius:.9rem!important;">
+          <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h1 class="card-title" style="font-weight: 600;">Burton</h1>
+            <h3>$140</h3>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          </div>
+          <div class="m-3">
+            <button class="text-white" style="background-color: #FF438D; padding: 9px 25px; border: 0; border-radius: 8px;">Order Now</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-lg-4 col-md-6">
+        <div class="card h-100 border-0 shadow" style="border-radius:.9rem!important;">
+          <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h1 class="card-title" style="font-weight: 600;">Wexley</h1>
+            <h3>$150</h3>
+            <p class="card-text" style="text-align: justify;">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          </div>
+          <div class="m-3">
+            <button class="text-white" style="background-color: #FF438D; padding: 9px 25px; border: 0; border-radius: 8px;">Order Now</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- ------------- -->
+  
+  <!-- Email Submit section  -->
+  <section class="container" style="margin-bottom: 7rem;">
+    <div class="rounded-3 d-flex align-items-center justify-content-center" style="height: 300px; background-color: #FCEAE8;">
+      <div>
+        <h1>LETS STAY IN TOUCH</h1>
+      <h5>Get updates on sales, specials and more</h5>
+      <input class="border-0 rounded-3 p-2 w-100 shadow" type="text" placeholder="Your Email">
+      <br>
+      <button class="text-white mt-2" style="background-color: #FF438D; padding: 9px 25px; border: 0; border-radius: 8px;">SUBMIT</button>
+      </div>
+    </div>
+  </section>
+</main>
+<!-- main section end -->
+
+<!-- ---------------------    -->
+
+<!-- footer section  -->
+<footer class="container">
+  <p style="text-align: center;"><small>©2021. Panda Commerce. All rights reserved. Jimy Joseph, Bangladesh.</small></p>
+</footer>
+<!-- footer end -->
+
+<!-- ---------------------    -->
+
+<!-- bootstrap js -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
+  
