--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <!-- main section start -->
  <main>
   <!-- Categoris -->
-  <section class="container" style="margin-bottom: 4rem;" id="shoes">
+  <section class="container" style="margin-bottom: 4rem;">
     <h1 style="font-weight: 630; text-align: center;">Categories</h1>
     <div class="row row-cols-lg-3 gy-5">
       <div class="col-12 col-lg-4 col-md-6">
@@ -135,7 +135,7 @@
 </section>
 
   <!-- Shoes  -->
-  <section class="container" style="margin-bottom: 4rem;">
+  <section class="container" id="shoes" style="margin-bottom: 4rem;">
     <h1 style="font-weight: 630; text-align: center;">Shoes</h1>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col-12 col-lg-4 col-md-6">
